--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,17 @@
     <string name="pref_sort_label_popular">Popular</string>
     <string name="pref_sort_label_highRate">Top Rated</string>
     <string name="pref_sort_label_upcoming">Upcoming</string>
+    <string name="pref_sort_label_nowplaying">Now Playing</string>
     <string name="pref_sort_key" translatable="false">sort</string>
     <string name="pref_sort_popular" translatable="false">popular</string>
     <string name="pref_sort_highRate" translatable="false">top_rated</string>
     <string name="pref_sort_upcoming" translatable="false">upcoming</string>
+    <string name="pref_sort_nowplaying" translatable="false">now_playing</string>
 
     <string name="title_activity_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_about">About</string>
+
+    <string name="search_hint">Search</string>
 
 </resources>
