--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="pref_sort_upcoming" translatable="false">upcoming</string>
     <string name="pref_sort_nowplaying" translatable="false">now_playing</string>
 
+    <string name="pref_theme_label">Theme</string>
+    <string name="pref_theme_label_dark">Dark</string>
+    <string name="pref_theme_label_light">Light</string>
+    <string name="pref_theme_key" translatable="false">theme</string>
+    <string name="pref_theme_dark" translatable="false">Dark</string>
+    <string name="pref_theme_light" translatable="false">Light</string>
+
     <string name="title_activity_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_about">About</string>
